update mission, fix img squish, add body tags

--- a/styles/how_we_met_section.scss
+++ b/styles/how_we_met_section.scss
@@ -33,7 +33,7 @@
       @media screen and (max-width: 650px) {
         width: 100%;
         margin: 0px;
-        background-position: right;
+        height: auto;
       }
     }
   }
