--- a/styles/mission_section.scss
+++ b/styles/mission_section.scss
@@ -106,6 +106,7 @@
       }
       @media screen and (max-width: 650px) {
         width: 100%;
+        height: auto;
       }
     }
   }
